src/rules/snapshots/pg_migration_lint__rules__pgm102__tests__timestamp_0_fires.snap
---
source: src/rules/pgm102.rs
expression: findings
---
- rule_id: PGM102
  severity: Minor
  message: "Column 'ts' on 'events' uses 'timestamp(0)'. Precision 0 causes rounding, not truncation — a value of '23:59:59.9' rounds to the next day. Use full precision and format on output instead."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
